welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: Missing closing brace `}' assumed here
while(estSurMessage()){
^BDR2:2: error: identifier expected but 'var' found.
  def var a= litMessage() match{
      ^